# drop-with-owned-fields.rs

./: Cargo.toml  README.md  fix-docsrs-li-details-summary.html
src/: _lib.rs  compile_fail_tests.md
src/proc_macros/: Cargo.toml  _mod.rs  args.rs  derives.rs  drop_sugar.rs
src/proc_macros/utils/: _mod.rs
tests/: defer.rs  main.rs
