# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
path = "src/_lib.rs"

[package]
name = "drop-with-owned-fields"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.1.1"  # Keep in sync
edition = "2021"
rust-version = "1.79.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/drop-with-owned-fields.rs"
documentation = "https://docs.rs/drop-with-owned-fields"
readme = "README.md"

description = "Safe and sound *owned* access to a `struct`'s fields in `Drop`: no more `unsafe` usage of `ManuallyDrop`!"
# keywords = []

[features]
default = [
]

drop-sugar = [
    "drop-with-owned-fields-proc_macros/drop-sugar",
]

# unstable! Will probably use nightly to improve doc quality
better-docs = []

ui-tests = [
    "better-docs",
]

# `docs-rs` is very similar to `better-docs`, but for it being allowed to enable
# other features as well, often to make sure optional/non-`default` features
# make it to the rendered docs (using `--all-features` instead is not that great).
docs-rs = [
    "better-docs",
    # "drop-sugar",
]

[dependencies]

[dependencies.drop-with-owned-fields-proc_macros]
path = "src/proc_macros"
version = "=0.1.1"  # Keep in sync

[dev-dependencies]
serde.version = "1.0.219"
serde_derive.version = "1.0.219"

[dev-dependencies.drop-with-owned-fields]
path = "."
features = [
    "drop-sugar",
]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
features = [
    "docs-rs",
]
rustdoc-args = [
    # Use (with or without `open`):
    # ```md
    # <details open class="custom"><summary><span class="summary-box"><span>Click to hide</span></span></summary>
    # …
    # </details>
    # ```
    # to get nice drop-down menus (and avoid the css bug with rustdoc).
    "--html-before-content", "fix-docsrs-li-details-summary.html",
]
