# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "_mod.rs"

[package]
name = "drop-with-owned-fields-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"
]
version = "0.1.1"  # Keep in sync
edition = "2021"
rust-version = "1.79.0"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/drop-with-owned-fields.rs"
documentation = "https://docs.rs/drop-with-owned-fields"

description = "Internal: proc-macro backend of ::drop_with_owned_fields."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "2.0.0"
syn.features = [
    # "full",
]

[features]
default = [
    # "drop-sugar",
]
drop-sugar = [
    "syn/full",
]
